--- a/index.html
+++ b/index.html
@@ -5,51 +5,157 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Frontend Mentor | Insure landing page</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <div class="container">
+    <div class="wrapper">
+      <header>
+        <img src="/images/logo.svg" alt="logo">
+        <nav>
+          <ul>
+            <li> <a href="#">How we work</a></li>
+            <li> <a href="#">Blog</a></li>
+            <li> <a href="#">Account</a></li>
+            <button class="button">View plans</button>
+          </ul>
+          <img src="/images/icon-hamburger.svg" alt="menu open">
+        </nav>
+      </header>
+
+      <main>
+        <div class="background"></div>
+        <section>
+          <div class="columns">
+
+            <div class="col">
+              <h1>Humanizing your insurance.</h1>
+              <p>Get your life insurance coverage easier and faster. We blend our expertise
+                and technology to help you find the plan that’s right for you. Ensure you
+                and your loved ones are protected.</p>
+              <button class="button button-reverse">View plans</button>
+            </div>
+            <div class="col">
+              <picture>
+                <source media="(min-width: 1024px)" srcset="/images/image-intro-desktop.jpg">
+                <img src="/images/image-intro-mobile.jpg" alt="family">
+              </picture>
+
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <h2>We’re different</h2>
+          <div class="flex-boxes">
+            <div class="flex-box">
+              <img src="/images/icon-snappy-process.svg" alt="">
+              <h3>Snappy Process</h3>
+              <p>Our application process can be completed in minutes, not hours. Don’t get
+                stuck filling in tedious forms.</p>
+            </div>
+            <div class="flex-box">
+              <img src="/images/icon-affordable-prices.svg" alt="">
+              <h3>Affordable Prices</h3>
+              <p>
+                We don’t want you worrying about high monthly costs. Our prices may be low,
+                but we still offer the best coverage possible.</p>
+            </div>
+            <div class="flex-box">
+              <img src="/images/icon-people-first.svg" alt="">
+              <h3>People First</h3>
+              <p> Our plans aren’t full of conditions and clauses to prevent payouts. We make
+                sure you’re covered when you need it.</p>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <div class="columns">
+            <div class="col">
+              <h2>Find out more about how we work</h2>
+            </div>
+            <div class="col">
+              <button class="button">How we work</button>
+            </div>
+          </div>
+
+        </section>
+      </main>
+
+      <footer>
+        <div class="footer-container">
+          <div class="footer-top">
+            <div class="footer-logo"><img src="/images/logo.svg" alt="logo"></div>
+
+            <div class="footer-socials">
+              <img src="/images/icon-facebook.svg" alt="facebook logo">
+              <img src="/images/icon-twitter.svg" alt="twitter logo">
+              <img src="/images/icon-pinterest.svg" alt="pinterest logo">
+              <img src="/images/icon-instagram.svg" alt="icon-instagram logo">
+            </div>
+
+          </div>
+
+          <div class="footer-bottom">
+
+            <div class="footer-col">
+              <h4>Our company</h4>
+              <ul>
+                <li> How we work</li>
+                <li> Why Insure?</li>
+                <li> View plans</li>
+                <li> Reviews</li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>help me</h4>
+              <ul>
+                <li> FAQ</li>
+                <li> terms of use</li>
+                <li> privacy policy</li>
+                <li> cookies</li>
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Contact</h4>
+              <ul>
+                <li> Sales</li>
+                <li> Support</li>
+                <li> Live chat</li>
+
+              </ul>
+            </div>
+            <div class="footer-col">
+              <h4>Others</h4>
+              <ul>
+                <li> Careers</li>
+                <li> Press</li>
+                <li> Licenses</li>
+              </ul>
+            </div>
+
+          </div>
+        </div>
+
+      </footer>
+    </div>
+  </div>
   <!-- 
-  How we work
-  Blog
-  Account
-  View plans
+  
 
-  Humanizing your insurance.
 
-  Get your life insurance coverage easier and faster. We blend our expertise
-  and technology to help you find the plan that’s right for you. Ensure you
-  and your loved ones are protected.
 
-  View plans
 
-  We’re different
-
-  Snappy Process
-
-  Our application process can be completed in minutes, not hours. Don’t get
-  stuck filling in tedious forms.
-
-  Affordable Prices
-
-  We don’t want you worrying about high monthly costs. Our prices may be low,
-  but we still offer the best coverage possible.
-
-  People First
-
-  Our plans aren’t full of conditions and clauses to prevent payouts. We make
-  sure you’re covered when you need it.
-
-  Find out more about how we work
-
-  How we work
-
-  Our company
-
-  How we work
-  Why Insure?
-  View plans
-  Reviews
+ 
+  
+ 
 
   Help me
 
