--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
       </header>
 
       <main>
+        <div class="background">
+          <div class="bg-general-styles bg-desktop-2"></div>
+        </div>
 
         <section>
-          <div class="background">
-            <div class="bg-general-styles bg-desktop-2"></div>
-          </div>
+
           <div class="bg-general-styles bg-desktop-1"></div>
 
           <div class="columns">
@@ -43,7 +44,7 @@
               <div class="bg-general-styles bg-mobile-1"></div>
               <div class="bg-general-styles bg-mobile-2"></div>
               <div class="padding-inline">
-                <h1>Humanizing your insurance.</h1>
+                <h1><span>Humanizing</span> your insurance.</h1>
                 <p>Get your life insurance coverage easier and faster. We blend our expertise
                   and technology to help you find the plan that’s right for you. Ensure you
                   and your loved ones are protected.</p>
@@ -63,30 +64,33 @@
         </section>
 
         <section>
-          <div class="padding-inline">
-            <h2>We’re different</h2>
-            <div class="flex-boxes">
-              <div class="flex-box">
-                <img src="/images/icon-snappy-process.svg" alt="">
-                <h3>Snappy Process</h3>
-                <p>Our application process can be completed in minutes, not hours. Don’t get
-                  stuck filling in tedious forms.</p>
-              </div>
-              <div class="flex-box">
-                <img src="/images/icon-affordable-prices.svg" alt="">
-                <h3>Affordable Prices</h3>
-                <p>
-                  We don’t want you worrying about high monthly costs. Our prices may be low,
-                  but we still offer the best coverage possible.</p>
-              </div>
-              <div class="flex-box">
-                <img src="/images/icon-people-first.svg" alt="">
-                <h3>People First</h3>
-                <p> Our plans aren’t full of conditions and clauses to prevent payouts. We make
-                  sure you’re covered when you need it.</p>
+          <div class="flex-group">
+            <div class="padding-inline">
+              <h2>We’re different</h2>
+              <div class="flex-boxes">
+                <div class="flex-box">
+                  <img src="/images/icon-snappy-process.svg" alt="">
+                  <h3>Snappy Process</h3>
+                  <p>Our application process can be completed in minutes, not hours. Don’t get
+                    stuck filling in tedious forms.</p>
+                </div>
+                <div class="flex-box">
+                  <img src="/images/icon-affordable-prices.svg" alt="">
+                  <h3>Affordable Prices</h3>
+                  <p>
+                    We don’t want you worrying about high monthly costs. Our prices may be low,
+                    but we still offer the best coverage possible.</p>
+                </div>
+                <div class="flex-box">
+                  <img src="/images/icon-people-first.svg" alt="">
+                  <h3>People First</h3>
+                  <p> Our plans aren’t full of conditions and clauses to prevent payouts. We make
+                    sure you’re covered when you need it.</p>
+                </div>
               </div>
             </div>
           </div>
+
 
         </section>
 
