Style how we work mobile/desktop

--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
 
         <section>
           <div class="padding-inline">
-            <div class="columns">
-              <div class="col">
-                <h2>Find out more about how we work</h2>
+            <div class="how-we-work">
+              <div class="how-we-work-background"></div>
+              <div class="how-we-work-col">
+                <h2><span class="block">Find out more</span> about how we work</h2>
               </div>
-              <div class="col">
-                <button class="button">How we work</button>
+              <div class="how-we-work-col">
+                <button class="button button-reverse">How we work</button>
               </div>
             </div>
           </div>
