Feature images mobile/desktop

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container">
 
     <header class="wrapper">
-      <img src="/images/logo.svg" alt="logo">
+      <img src="./images/logo.svg" alt="logo">
       <nav>
         <ul>
           <li data-section-id="1"> <a href="#">How we work</a></li>
@@ -25,8 +25,8 @@
           <li data-section-id="3"> <a href="#">Account</a></li>
           <button class="button">View plans</button>
         </ul>
-        <img class="btn nav-btn" src="/images/icon-hamburger.svg" alt="menu open">
-        <img class="btn nav-close" src="/images/icon-close.svg" alt="menu close">
+        <img class="btn nav-btn" src="./images/icon-hamburger.svg" alt="menu open">
+        <img class="btn nav-close" src="./images/icon-close.svg" alt="menu close">
       </nav>
     </header>
 
@@ -57,7 +57,7 @@
 
             <picture>
               <source media="(min-width: 1024px)" srcset="/images/image-intro-desktop.jpg">
-              <img src="/images/image-intro-mobile.jpg" alt="family">
+              <img src="./images/image-intro-mobile.jpg" alt="family">
             </picture>
 
           </div>
@@ -70,20 +70,20 @@
             <h2>We’re different</h2>
             <div class="flex-boxes">
               <div class="flex-box">
-                <img src="/images/icon-snappy-process.svg" alt="">
+                <img src="./images/icon-snappy-process.svg" alt="">
                 <h3>Snappy Process</h3>
                 <p>Our application process can be completed in minutes, not hours. Don’t get
                   stuck filling in tedious forms.</p>
               </div>
               <div class="flex-box">
-                <img src="/images/icon-affordable-prices.svg" alt="">
+                <img src="./images/icon-affordable-prices.svg" alt="">
                 <h3>Affordable Prices</h3>
                 <p>
                   We don’t want you worrying about high monthly costs. Our prices may be low,
                   but we still offer the best coverage possible.</p>
               </div>
               <div class="flex-box">
-                <img src="/images/icon-people-first.svg" alt="">
+                <img src="./images/icon-people-first.svg" alt="">
                 <h3>People First</h3>
                 <p> Our plans aren’t full of conditions and clauses to prevent payouts. We make
                   sure you’re covered when you need it.</p>
@@ -119,7 +119,7 @@
 
         <div class="footer-top">
 
-          <div class="footer-logo"><img src="/images/logo.svg" alt="logo"></div>
+          <div class="footer-logo"><img src="./images/logo.svg" alt="logo"></div>
           <div class="footer-socials">
             <div data-tooltip="facebook" class="icon">
 
