Features in mobile/desktop

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="col">
 
             <picture>
-              <source media="(min-width: 1024px)" srcset="/images/image-intro-desktop.jpg">
+              <source media="(min-width: 1024px)" srcset="./images/image-intro-desktop.jpg">
               <img src="./images/image-intro-mobile.jpg" alt="family">
             </picture>
 
